# vite-stock

./: .gitignore  DB_SCHEMA.md  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  license_bded126f5b48.key  tauri.conf.json  vendor_private.hex
src-tauri/capabilities/: default.json
src-tauri/src/: background.rs  lib.rs  main.rs
src-tauri/src/commands/: a4print.rs  alerts.rs  backup.rs  dain.rs  inventory.rs  license.rs  mod.rs  printing.rs  products.rs  reports.rs  sessions.rs  settings.rs  suppliers.rs  transactions.rs
src-tauri/src/db/: mod.rs  schema_v2.rs
src-tauri/src/license/: crypto.rs  hwid.rs  mod.rs
src-tauri/src/utils/: escpos.rs  mod.rs  pdf.rs
src/components/: LicenseGuard.tsx
src/components/ui/: FeatureGate.tsx  Toast.tsx
src/hooks/: useBarcode.ts  useHotkeys.ts  useStartupChecks.ts
src/i18n/: index.ts
src/i18n/locales/: ar.json  fr.json
src/layouts/: AppShell.tsx
src/lib/: commands.ts
src/pages/Activation/: index.tsx
src/pages/Dain/: index.tsx
src/pages/Inventory/: AddBatchModal.tsx  index.tsx
src/pages/License/: index.tsx
src/pages/POS/: CartItemRow.tsx  CartTabBar.tsx  PaymentPanel.tsx  ProductSearchModal.tsx  ScannerIndicator.tsx  index.tsx
src/pages/Products/: ProductFormModal.tsx  index.tsx
src/pages/Reports/: index.tsx
src/pages/Settings/: PrinterSection.tsx  index.tsx
src/providers/: BarcodeProvider.tsx
src/store/: cartStore.ts  licenseStore.ts  settingsStore.ts
src/styles/: globals.css
src/types/: index.ts
